v1.0.0/modules/schema/pages/class/PssPTIST3.adoc
= `PssPTIST3`
:toclevels: 4


+++PTI microprocessor-based stabilizer type 3.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PssPTIST3`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
**** *`PssPTIST3`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
PssPTIST3 {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}































































ExcitationSystemDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



RemoteInputSignal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}


































PssPTIST3 -> ExcitationSystemDynamics: ExcitationSystemDynamics


PssPTIST3 -> RemoteInputSignal: RemoteInputSignal


PssPTIST3 -> DiagramObject: DiagramObjects


PssPTIST3 -> InstanceSet: InstanceSet


PssPTIST3 -> Name: Names


PssPTIST3 -> ChangeSetMember: PropertiesCIMDataObject


PssPTIST3 -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 1
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model with which this power system stabilizer model is associated.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<a0,`a0`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>A0</i>).+++

| <<a1,`a1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Limiter (<i>Al</i>).+++

| <<a2,`a2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>A2</i>).+++

| <<a3,`a3`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>A3</i>).+++

| <<a4,`a4`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>A4</i>).+++

| <<a5,`a5`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>A5</i>).+++

| <<al,`al`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Limiter (<i>Al</i>).+++

| <<athres,`athres`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Threshold value above which output averaging will be bypassed (<i>Athres</i>).  Typical value = 0,005.+++

| <<b0,`b0`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>B0</i>).+++

| <<b1,`b1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>B1</i>).+++

| <<b2,`b2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>B2</i>).+++

| <<b3,`b3`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>B3</i>).+++

| <<b4,`b4`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>B4</i>).+++

| <<b5,`b5`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>B5</i>).+++

| <<dl,`dl`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Limiter (<i>Dl</i>).+++

| <<dtc,`dtc`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time step related to activation of controls (<i>deltatc</i>) (&gt;= 0).  Typical value = 0,025 (0,03 for 50 Hz).+++

| <<dtf,`dtf`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time step frequency calculation (<i>deltatf</i>) (&gt;= 0).  Typical value = 0,025 (0,03 for 50 Hz).+++

| <<dtp,`dtp`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time step active power calculation (<i>deltatp</i>) (&gt;= 0).  Typical value = 0,0125  (0,015 for 50 Hz).+++

| <<isw,`isw`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Digital/analogue output switch (<i>Isw</i>).
true = produce analogue output
false = convert to digital output, using tap selection table.+++

| <<k,`k`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Gain (<i>K</i>).  Typical value = 9.+++

| <<lthres,`lthres`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Threshold value (<i>Lthres</i>).+++

| <<m,`m`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++(<i>M</i>).  <i>M</i> = 2 x <i>H</i>.  Typical value = 5.+++

| <<nav,`nav`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Number of control outputs to average (<i>NAV</i>) (1 &lt;=  <i>NAV</i> &lt;= 16).  Typical value = 4.+++

| <<ncl,`ncl`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Number of counts at limit to active limit function (<i>NCL</i>) (&gt; 0).+++

| <<ncr,`ncr`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Number of counts until reset after limit function is triggered (<i>NCR</i>).+++

| <<pmin,`pmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++(<i>Pmin</i>).+++

| <<t1,`t1`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T1</i>) (&gt;= 0).  Typical value = 0,3.+++

| <<t2,`t2`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T2</i>) (&gt;= 0).  Typical value = 1.+++

| <<t3,`t3`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T3</i>) (&gt;= 0).  Typical value = 0,2.+++

| <<t4,`t4`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T4</i>) (&gt;= 0).  Typical value = 0,05.+++

| <<t5,`t5`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T5</i>) (&gt;= 0).+++

| <<t6,`t6`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T6</i>) (&gt;= 0).+++

| <<tf,`tf`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>Tf</i>) (&gt;= 0).  Typical value = 0,2.+++

| <<tp,`tp`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,2.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<RemoteInputSignal,`RemoteInputSignal`>>
| 0..*
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this power system stabilizer model.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#a0]
=== `a0`
+++Filter coefficient (<i>A0</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.a0`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#a1]
=== `a1`
+++Limiter (<i>Al</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.a1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#a2]
=== `a2`
+++Filter coefficient (<i>A2</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.a2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#a3]
=== `a3`
+++Filter coefficient (<i>A3</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.a3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#a4]
=== `a4`
+++Filter coefficient (<i>A4</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.a4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#a5]
=== `a5`
+++Filter coefficient (<i>A5</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.a5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#al]
=== `al`
+++Limiter (<i>Al</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.al`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#athres]
=== `athres`
+++Threshold value above which output averaging will be bypassed (<i>Athres</i>).  Typical value = 0,005.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.athres`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#b0]
=== `b0`
+++Filter coefficient (<i>B0</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.b0`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#b1]
=== `b1`
+++Filter coefficient (<i>B1</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.b1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#b2]
=== `b2`
+++Filter coefficient (<i>B2</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.b2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#b3]
=== `b3`
+++Filter coefficient (<i>B3</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.b3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#b4]
=== `b4`
+++Filter coefficient (<i>B4</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.b4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#b5]
=== `b5`
+++Filter coefficient (<i>B5</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.b5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#dl]
=== `dl`
+++Limiter (<i>Dl</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.dl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#dtc]
=== `dtc`
+++Time step related to activation of controls (<i>deltatc</i>) (&gt;= 0).  Typical value = 0,025 (0,03 for 50 Hz).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.dtc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#dtf]
=== `dtf`
+++Time step frequency calculation (<i>deltatf</i>) (&gt;= 0).  Typical value = 0,025 (0,03 for 50 Hz).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.dtf`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#dtp]
=== `dtp`
+++Time step active power calculation (<i>deltatp</i>) (&gt;= 0).  Typical value = 0,0125  (0,015 for 50 Hz).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.dtp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model with which this power system stabilizer model is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.ExcitationSystemDynamics`
| Cardinality
| 1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#isw]
=== `isw`
+++Digital/analogue output switch (<i>Isw</i>).
true = produce analogue output
false = convert to digital output, using tap selection table.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.isw`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#k]
=== `k`
+++Gain (<i>K</i>).  Typical value = 9.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.k`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#lthres]
=== `lthres`
+++Threshold value (<i>Lthres</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.lthres`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#m]
=== `m`
+++(<i>M</i>).  <i>M</i> = 2 x <i>H</i>.  Typical value = 5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.m`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#nav]
=== `nav`
+++Number of control outputs to average (<i>NAV</i>) (1 &lt;=  <i>NAV</i> &lt;= 16).  Typical value = 4.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.nav`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#ncl]
=== `ncl`
+++Number of counts at limit to active limit function (<i>NCL</i>) (&gt; 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.ncl`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#ncr]
=== `ncr`
+++Number of counts until reset after limit function is triggered (<i>NCR</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.ncr`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#pmin]
=== `pmin`
+++(<i>Pmin</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.pmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this power system stabilizer model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.RemoteInputSignal`
| Cardinality
| 0..*
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

//[discrete]
[#t1]
=== `t1`
+++Time constant (<i>T1</i>) (&gt;= 0).  Typical value = 0,3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.t1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t2]
=== `t2`
+++Time constant (<i>T2</i>) (&gt;= 0).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.t2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t3]
=== `t3`
+++Time constant (<i>T3</i>) (&gt;= 0).  Typical value = 0,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.t3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t4]
=== `t4`
+++Time constant (<i>T4</i>) (&gt;= 0).  Typical value = 0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.t4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t5]
=== `t5`
+++Time constant (<i>T5</i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.t5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t6]
=== `t6`
+++Time constant (<i>T6</i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.t6`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tf]
=== `tf`
+++Time constant (<i>Tf</i>) (&gt;= 0).  Typical value = 0,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.tf`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tp]
=== `tp`
+++Time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.tp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===


