v1.1.0/modules/schema/pages/class/PssPTIST3.adoc
= `PssPTIST3`
:toclevels: 4


+++PTI microprocessor-based stabilizer type 3.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PssPTIST3`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
**** *`PssPTIST3`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<a0,`a0`>>
//| [[slots_table.a0]]<<a0,`a0`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>A0</i>).+++
| _n/a_

| <<a1,`a1`>>
//| [[slots_table.a1]]<<a1,`a1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Limiter (<i>Al</i>).+++
| _n/a_

| <<a2,`a2`>>
//| [[slots_table.a2]]<<a2,`a2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>A2</i>).+++
| _n/a_

| <<a3,`a3`>>
//| [[slots_table.a3]]<<a3,`a3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>A3</i>).+++
| _n/a_

| <<a4,`a4`>>
//| [[slots_table.a4]]<<a4,`a4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>A4</i>).+++
| _n/a_

| <<a5,`a5`>>
//| [[slots_table.a5]]<<a5,`a5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>A5</i>).+++
| _n/a_

| <<al,`al`>>
//| [[slots_table.al]]<<al,`al`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Limiter (<i>Al</i>).+++
| _n/a_

| <<athres,`athres`>>
//| [[slots_table.athres]]<<athres,`athres`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Threshold value above which output averaging will be bypassed (<i>Athres</i>).  Typical value = 0,005.+++
| _n/a_

| <<b0,`b0`>>
//| [[slots_table.b0]]<<b0,`b0`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>B0</i>).+++
| _n/a_

| <<b1,`b1`>>
//| [[slots_table.b1]]<<b1,`b1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>B1</i>).+++
| _n/a_

| <<b2,`b2`>>
//| [[slots_table.b2]]<<b2,`b2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>B2</i>).+++
| _n/a_

| <<b3,`b3`>>
//| [[slots_table.b3]]<<b3,`b3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>B3</i>).+++
| _n/a_

| <<b4,`b4`>>
//| [[slots_table.b4]]<<b4,`b4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>B4</i>).+++
| _n/a_

| <<b5,`b5`>>
//| [[slots_table.b5]]<<b5,`b5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Filter coefficient (<i>B5</i>).+++
| _n/a_

| <<dl,`dl`>>
//| [[slots_table.dl]]<<dl,`dl`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Limiter (<i>Dl</i>).+++
| _n/a_

| <<dtc,`dtc`>>
//| [[slots_table.dtc]]<<dtc,`dtc`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time step related to activation of controls (<i>deltatc</i>) (&gt;= 0).  Typical value = 0,025 (0,03 for 50 Hz).+++
| _n/a_

| <<dtf,`dtf`>>
//| [[slots_table.dtf]]<<dtf,`dtf`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time step frequency calculation (<i>deltatf</i>) (&gt;= 0).  Typical value = 0,025 (0,03 for 50 Hz).+++
| _n/a_

| <<dtp,`dtp`>>
//| [[slots_table.dtp]]<<dtp,`dtp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time step active power calculation (<i>deltatp</i>) (&gt;= 0).  Typical value = 0,0125  (0,015 for 50 Hz).+++
| _n/a_

| <<isw,`isw`>>
//| [[slots_table.isw]]<<isw,`isw`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Digital/analogue output switch (<i>Isw</i>).
true = produce analogue output
false = convert to digital output, using tap...+++
| _n/a_

| <<k,`k`>>
//| [[slots_table.k]]<<k,`k`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gain (<i>K</i>).  Typical value = 9.+++
| _n/a_

| <<lthres,`lthres`>>
//| [[slots_table.lthres]]<<lthres,`lthres`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Threshold value (<i>Lthres</i>).+++
| _n/a_

| <<m,`m`>>
//| [[slots_table.m]]<<m,`m`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++(<i>M</i>).  <i>M</i> = 2 x <i>H</i>.  Typical value = 5.+++
| _n/a_

| <<nav,`nav`>>
//| [[slots_table.nav]]<<nav,`nav`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Number of control outputs to average (<i>NAV</i>) (1 &lt;=  <i>NAV</i> &lt;= 16).  Typical value = 4.+++
| _n/a_

| <<ncl,`ncl`>>
//| [[slots_table.ncl]]<<ncl,`ncl`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Number of counts at limit to active limit function (<i>NCL</i>) (&gt; 0).+++
| _n/a_

| <<ncr,`ncr`>>
//| [[slots_table.ncr]]<<ncr,`ncr`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Number of counts until reset after limit function is triggered (<i>NCR</i>).+++
| _n/a_

| <<pmin,`pmin`>>
//| [[slots_table.pmin]]<<pmin,`pmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++(<i>Pmin</i>).+++
| _n/a_

| <<t1,`t1`>>
//| [[slots_table.t1]]<<t1,`t1`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T1</i>) (&gt;= 0).  Typical value = 0,3.+++
| _n/a_

| <<t2,`t2`>>
//| [[slots_table.t2]]<<t2,`t2`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T2</i>) (&gt;= 0).  Typical value = 1.+++
| _n/a_

| <<t3,`t3`>>
//| [[slots_table.t3]]<<t3,`t3`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T3</i>) (&gt;= 0).  Typical value = 0,2.+++
| _n/a_

| <<t4,`t4`>>
//| [[slots_table.t4]]<<t4,`t4`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T4</i>) (&gt;= 0).  Typical value = 0,05.+++
| _n/a_

| <<t5,`t5`>>
//| [[slots_table.t5]]<<t5,`t5`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T5</i>) (&gt;= 0).+++
| _n/a_

| <<t6,`t6`>>
//| [[slots_table.t6]]<<t6,`t6`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>T6</i>) (&gt;= 0).+++
| _n/a_

| <<tf,`tf`>>
//| [[slots_table.tf]]<<tf,`tf`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>Tf</i>) (&gt;= 0).  Typical value = 0,2.+++
| _n/a_

| <<tp,`tp`>>
//| [[slots_table.tp]]<<tp,`tp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,2.+++
| _n/a_

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
//| [[slots_table.ExcitationSystemDynamics]]<<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 1 +
xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model with which this power system stabilizer model is associated.+++
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| <<RemoteInputSignal,`RemoteInputSignal`>>
//| [[slots_table.RemoteInputSignal]]<<RemoteInputSignal,`RemoteInputSignal`>>
| 0..* +
xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this power system stabilizer model.+++
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#a0]
=== `a0`
+++Filter coefficient (<i>A0</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.a0`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.a0,&#10548;>>
--
////


//[discrete]
[#a1]
=== `a1`
+++Limiter (<i>Al</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.a1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.a1,&#10548;>>
--
////


//[discrete]
[#a2]
=== `a2`
+++Filter coefficient (<i>A2</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.a2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.a2,&#10548;>>
--
////


//[discrete]
[#a3]
=== `a3`
+++Filter coefficient (<i>A3</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.a3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.a3,&#10548;>>
--
////


//[discrete]
[#a4]
=== `a4`
+++Filter coefficient (<i>A4</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.a4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.a4,&#10548;>>
--
////


//[discrete]
[#a5]
=== `a5`
+++Filter coefficient (<i>A5</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.a5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.a5,&#10548;>>
--
////


//[discrete]
[#al]
=== `al`
+++Limiter (<i>Al</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.al`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.al,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#athres]
=== `athres`
+++Threshold value above which output averaging will be bypassed (<i>Athres</i>).  Typical value = 0,005.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.athres`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.athres,&#10548;>>
--
////


//[discrete]
[#b0]
=== `b0`
+++Filter coefficient (<i>B0</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.b0`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.b0,&#10548;>>
--
////


//[discrete]
[#b1]
=== `b1`
+++Filter coefficient (<i>B1</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.b1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.b1,&#10548;>>
--
////


//[discrete]
[#b2]
=== `b2`
+++Filter coefficient (<i>B2</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.b2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.b2,&#10548;>>
--
////


//[discrete]
[#b3]
=== `b3`
+++Filter coefficient (<i>B3</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.b3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.b3,&#10548;>>
--
////


//[discrete]
[#b4]
=== `b4`
+++Filter coefficient (<i>B4</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.b4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.b4,&#10548;>>
--
////


//[discrete]
[#b5]
=== `b5`
+++Filter coefficient (<i>B5</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.b5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.b5,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#dl]
=== `dl`
+++Limiter (<i>Dl</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.dl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dl,&#10548;>>
--
////


//[discrete]
[#dtc]
=== `dtc`
+++Time step related to activation of controls (<i>deltatc</i>) (&gt;= 0).  Typical value = 0,025 (0,03 for 50 Hz).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.dtc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.dtc,&#10548;>>
--
////


//[discrete]
[#dtf]
=== `dtf`
+++Time step frequency calculation (<i>deltatf</i>) (&gt;= 0).  Typical value = 0,025 (0,03 for 50 Hz).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.dtf`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.dtf,&#10548;>>
--
////


//[discrete]
[#dtp]
=== `dtp`
+++Time step active power calculation (<i>deltatp</i>) (&gt;= 0).  Typical value = 0,0125  (0,015 for 50 Hz).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.dtp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.dtp,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model with which this power system stabilizer model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.ExcitationSystemDynamics`
| Cardinality
| 1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

////
[.text-left]
--
<<slots_table.ExcitationSystemDynamics,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#isw]
=== `isw`
+++Digital/analogue output switch (<i>Isw</i>).
true = produce analogue output
false = convert to digital output, using tap selection table.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.isw`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isw,&#10548;>>
--
////


//[discrete]
[#k]
=== `k`
+++Gain (<i>K</i>).  Typical value = 9.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.k`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.k,&#10548;>>
--
////


//[discrete]
[#lthres]
=== `lthres`
+++Threshold value (<i>Lthres</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.lthres`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.lthres,&#10548;>>
--
////


//[discrete]
[#m]
=== `m`
+++(<i>M</i>).  <i>M</i> = 2 x <i>H</i>.  Typical value = 5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.m`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.m,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#nav]
=== `nav`
+++Number of control outputs to average (<i>NAV</i>) (1 &lt;=  <i>NAV</i> &lt;= 16).  Typical value = 4.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.nav`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.nav,&#10548;>>
--
////


//[discrete]
[#ncl]
=== `ncl`
+++Number of counts at limit to active limit function (<i>NCL</i>) (&gt; 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.ncl`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.ncl,&#10548;>>
--
////


//[discrete]
[#ncr]
=== `ncr`
+++Number of counts until reset after limit function is triggered (<i>NCR</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.ncr`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.ncr,&#10548;>>
--
////


//[discrete]
[#pmin]
=== `pmin`
+++(<i>Pmin</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.pmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmin,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this power system stabilizer model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.RemoteInputSignal`
| Cardinality
| 0..*
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

////
[.text-left]
--
<<slots_table.RemoteInputSignal,&#10548;>>
--
////


//[discrete]
[#t1]
=== `t1`
+++Time constant (<i>T1</i>) (&gt;= 0).  Typical value = 0,3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.t1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t1,&#10548;>>
--
////


//[discrete]
[#t2]
=== `t2`
+++Time constant (<i>T2</i>) (&gt;= 0).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.t2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t2,&#10548;>>
--
////


//[discrete]
[#t3]
=== `t3`
+++Time constant (<i>T3</i>) (&gt;= 0).  Typical value = 0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.t3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t3,&#10548;>>
--
////


//[discrete]
[#t4]
=== `t4`
+++Time constant (<i>T4</i>) (&gt;= 0).  Typical value = 0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.t4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t4,&#10548;>>
--
////


//[discrete]
[#t5]
=== `t5`
+++Time constant (<i>T5</i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.t5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t5,&#10548;>>
--
////


//[discrete]
[#t6]
=== `t6`
+++Time constant (<i>T6</i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.t6`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t6,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tf]
=== `tf`
+++Time constant (<i>Tf</i>) (&gt;= 0).  Typical value = 0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.tf`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tf,&#10548;>>
--
////


//[discrete]
[#tp]
=== `tp`
+++Time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssPTIST3.tp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tp,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
